--- a/PR016-ExpandableListView/app/src/main/res/values/strings.xml
+++ b/PR016-ExpandableListView/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="curso">Curso</string>
     <string name="title_activity_main">ExpandableListView</string>
     <string name="expandir_contraer_grupo">Expandir / Contraer grupo</string>
+    <string name="info_alumno">%1$s (%2$s del %3$s)"</string>
 </resources>
