--- a/PR109-Retrofit/app/src/main/res/values/strings.xml
+++ b/PR109-Retrofit/app/src/main/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="concepto">Concepto</string>
     <string name="responsable">Responsable</string>
     <string name="guardar">Guardar</string>
+    <string name="de">%1$d de %2$d</string>
 
 </resources>
