--- a/PR111-SugarORM/app/src/main/res/values/strings.xml
+++ b/PR111-SugarORM/app/src/main/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="telefono">Telefono</string>
     <string name="direccion">Dirección</string>
     <string name="eliminar">Eliminar</string>
+    <string name="de">%1$d de %2$d</string>
 
 </resources>
