--- a/PR118-SearchView/app/src/main/res/values/strings.xml
+++ b/PR118-SearchView/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="title_activity_busqueda">Restultados de la búsqueda</string>
     <string name="search_hint">Buscar alumno</string>
     <string name="limpiar_historial_busqueda">Limpiar historial de búsqueda</string>
+    <string name="descripcion">%1$s - %2$s</string>
 
 </resources>
