--- a/PR013-ListViewSeleccion/app/src/main/res/values/strings.xml
+++ b/PR013-ListViewSeleccion/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
     <string name="app_name">ListView de selección</string>
     <string name="title_activity_main">ListView de selección</string>
     <string name="caballo">¿De qué color es el caballo blanco de Santiago?</string>
+    <string name="puntuacion">%1$s %2$d</string>
 
 </resources>
