--- a/PR015-GridView/app/src/main/res/values/strings.xml
+++ b/PR015-GridView/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">PR015-GridView</string>
     <string name="title_activity_main">GridView</string>
     <string name="concepto">Concepto</string>
+    <string name="traduccion">%1$s se dice %2$s</string>
 </resources>
