--- a/PR080-HTTPURLConnection/app/src/main/res/values/strings.xml
+++ b/PR080-HTTPURLConnection/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="nombre">Nombre</string>
     <string name="buscar">Buscar</string>
     <string name="no_hay_conexion_a_internet">No hay conexión a Internet</string>
-    <string name="entradas">entradas</string>
+    <string name="entradas">%1$s entradas</string>
     <string name="eco">Eco</string>
 
 </resources>
