--- a/PR095-DownloadManager/app/src/main/res/values/strings.xml
+++ b/PR095-DownloadManager/app/src/main/res/values/strings.xml
@@ -3,9 +3,10 @@
 
     <string name="app_name">DownloadManager</string>
     <string name="descargar">Descargar</string>
-    <string name="descargando">Descargando</string>
+    <string name="descargando">Descargando %1$s</string>
     <string name="descargas">Descargas</string>
-    <string name="error">Error en la descarga. Motivo: </string>
+    <string name="error">Error en la descarga. Motivo: %1$s</string>
     <string name="no_hay_canciones">No hay canciones</string>
+    <string name="descripcion">%1$s (%2$s)</string>
 
 </resources>
