--- a/PR130-Progreso/app/src/main/res/values/strings.xml
+++ b/PR130-Progreso/app/src/main/res/values/strings.xml
@@ -3,8 +3,10 @@
 
     <string name="app_name">Handler</string>
     <string name="iniciar">Iniciar</string>
-    <string name="trabajando">Trabajando…</string>
-    <string name="realizadas">Realizadas</string>
-    <string name="tareas">tareas</string>
+    <string name="trabajando">Trabajando…(%1$d de %2$d)</string>
+    <plurals name="realizadas">
+        <item quantity="one">Realizada %1$d tarea</item>
+        <item quantity="other">Realizadas %1$d tareas</item>
+    </plurals>
 
 </resources>
