--- a/PR153-DataBindingRecyclerView/app/src/main/res/values/strings.xml
+++ b/PR153-DataBindingRecyclerView/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="app_name">DataBindingRecyclerView</string>
     <string name="no_hay_alumnos">No hay alumnos</string>
-    <string name="ha_pulsado_sobre">"Ha pulsado sobre "</string>
+    <string name="ha_pulsado_sobre">"Ha pulsado sobre %1$s"</string>
     <string name="avatar">Avatar</string>
 
 </resources>
