--- a/PR157-GridRecyclerView/app/src/main/res/values/strings.xml
+++ b/PR157-GridRecyclerView/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">GridRecyclerView</string>
     <string name="concepto">Concepto</string>
     <string name="nombre_transicion_imagen">transicion_imagen</string>
+    <string name="nombre_transicion_texto">transicion_texto</string>
+    <string name="imagen_cabecera">Foto</string>
 </resources>
