--- a/PR160-CollapsingToolbarTabLayout/app/src/main/res/values/strings.xml
+++ b/PR160-CollapsingToolbarTabLayout/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
     <string name="app_name">TabLayout</string>
     <string name="action_settings">Settings</string>
-    <string name="section_format">Hello World from section: %1$d</string>
+    <string name="numero_pagina">%1$d</string>
+    <string name="has_pulsado_sobre_el_fab">Has pulsado sobre el FAB de la página %1$s</string>
+    <string name="tab">Tab %1$d</string>
+    <string name="cabecera">Cabecera</string>
 </resources>
