--- a/PR027-SQLiteDAO/app/src/main/res/values/strings.xml
+++ b/PR027-SQLiteDAO/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">SQLiteDAO</string>
-    <string name="sin_alumnado_agregue_un_alumno">No hay alumnos.\nPulse para agregar</string>
+    <string name="app_name">Alumnado</string>
+    <string name="sin_alumnado_agregue_un_alumno">No hay alumnos</string>
     <string name="nombre">Nombre</string>
     <string name="curso">Curso</string>
     <string name="telefono">Teléfono</string>
@@ -10,7 +10,6 @@
     <string name="agregar_alumno">Agregar</string>
     <string name="editar_alumno">Actualizar</string>
     <string name="eliminar_alumno">Eliminar</string>
-    <string name="datos_obligatorios">No ha introducido datos obligatorios</string>
     <string name="insercion_correcta">El alumno se ha agregado correctamente</string>
     <string name="insercion_incorrecta">Se ha producido un error al agregar el alumno</string>
     <string name="actualizacion_correcta">El alumno se ha actualizado correctamente</string>
@@ -19,6 +18,8 @@
     <string name="no">No</string>
     <string name="si">Sí</string>
     <string name="title_activity_alumno">AlumnoActivity</string>
-    <string name="esta_seguro_de_eliminar_los_alumnos">¿Está seguro de eliminar los alumnos seleccionados?</string>
+    <string name="esta_seguro_de_eliminar_los_alumnos">¿Está seguro de eliminar los alumnos?</string>
+    <string name="avatar">avatar</string>
+    <string name="campo_obligatorio">Campo obligatorio</string>
 
 </resources>
