Add user auth email password auth

--- a/PR168-Firebase/app/src/main/res/values/strings.xml
+++ b/PR168-Firebase/app/src/main/res/values/strings.xml
@@ -21,5 +21,24 @@
     <string name="esta_seguro_de_eliminar_los_alumnos">¿Está seguro de eliminar los alumnos?</string>
     <string name="avatar">avatar</string>
     <string name="campo_obligatorio">Campo obligatorio</string>
+    <string name="title_activity_login">Sign in</string>
+
+    <!-- Strings related to login -->
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Conectarse</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="error_invalid_email">This email address is invalid</string>
+    <string name="error_invalid_password">This password is too short</string>
+    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_field_required">This field is required</string>
+    <string name="permission_rationale">"Contacts permissions are needed for providing email
+        completions."
+    </string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="desconectarse">Salir</string>
+    <string name="action_sign_up">Registrarse</string>
 
 </resources>
