--- a/PR168-Firebase/app/src/main/res/values/strings.xml
+++ b/PR168-Firebase/app/src/main/res/values/strings.xml
@@ -40,5 +40,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="desconectarse">Salir</string>
     <string name="action_sign_up">Registrarse</string>
+    <string name="datos_actualizados">Datos actualizados</string>
 
 </resources>
