PR168 Fix student undo key

--- a/PR168-Firebase/app/src/main/res/values/strings.xml
+++ b/PR168-Firebase/app/src/main/res/values/strings.xml
@@ -40,8 +40,9 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="desconectarse">Salir</string>
     <string name="action_sign_up">Registrarse</string>
-    <string name="datos_actualizados">Datos actualizados</string>
+    <string name="datos_actualizados">Se han obtenido datos actualizados</string>
     <string name="alumno_eliminado">Se ha eliminado el alumno</string>
     <string name="deshacer">Deshacer</string>
+    <string name="notas">Notas</string>
 
 </resources>
