--- a/PR151-DataBinding/app/src/main/res/values/strings.xml
+++ b/PR151-DataBinding/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="tenga_usted">tenga usted</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_custom_binding">Custom Binding</string>
+    <string name="lorempixel">http://lorempixel.com/400/200/sports/</string>
 </resources>
