--- a/PR170-DataBindingBidireccional/app/src/main/res/values/strings.xml
+++ b/PR170-DataBindingBidireccional/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="tenga_usted">tenga usted</string>
     <string name="lorempixel">http://lorempixel.com/400/200/sports/</string>
     <string name="foto">Foto</string>
+    <string name="tratamiento">Tratamiento</string>
 </resources>
