--- a/PR002-Saludar/app/src/main/res/values/strings.xml
+++ b/PR002-Saludar/app/src/main/res/values/strings.xml
@@ -4,7 +4,8 @@
     <string name="introduzca_nombre">Introduzca su nombre</string>
     <string name="saludar">Saludar</string>
     <string name="buenos_dias">Buenos días</string>
-    <string name="saludar_educadamente">Saludar educadamente</string>
+    <string name="saludar_educadamente">Modo educado: Activado</string>
+    <string name="saludar_normal">Modo educado: Desactivado</string>
     <string name="modo_educado">Modo educado</string>
     <string name="on">Activado</string>
     <string name="off">Desactivado</string>
