--- a/PR176-AsyncTaskLoader/app/src/main/res/values/strings.xml
+++ b/PR176-AsyncTaskLoader/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="no_hay_alumnos">No hay alumnos</string>
     <string name="ha_pulsado_sobre">Ha pulsado sobre %1$s</string>
     <string name="avatar">Avatar</string>
+    <string name="agregar_alumno">Agregar Alumno</string>
 
 </resources>
