--- a/PR143-LocationAPI/app/src/main/res/values/strings.xml
+++ b/PR143-LocationAPI/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="localizacion">Localización:</string>
+    <string name="permisos_requeridos">Para mostrar la localización es neecesario que conceda los permisos solicitados</string>
+    <string name="geocoder_no_disponible">Servicio de geolocalización inversa no disponible</string>
+    <string name="lat_long_invalidas">La latitud o longitud indicada no es válida</string>
+    <string name="direccion_no_encontrada">No se ha encontrado ninguna dirección para esas coordenadas</string>
 </resources>
