--- a/PR143-LocationAPI/app/src/main/res/values/strings.xml
+++ b/PR143-LocationAPI/app/src/main/res/values/strings.xml
@@ -1,8 +1,5 @@
 <resources>
-    <string name="app_name">PR140-LocationAPI</string>
-
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name">LocationAPI</string>
     <string name="localizacion">Localización:</string>
     <string name="permisos_requeridos">Para mostrar la localización es neecesario que conceda los permisos solicitados</string>
     <string name="geocoder_no_disponible">Servicio de geolocalización inversa no disponible</string>
