Upgrade to Android Studio 2.1

--- a/PR089-StartedService/app/src/main/res/values/strings.xml
+++ b/PR089-StartedService/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="no_hay_canciones">No hay canciones</string>
     <string name="playstop">Play / Stop</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+
 </resources>
