Upgrade to Android Studio 2.1

--- a/PR119-Almacenamiento/app/src/main/res/values/strings.xml
+++ b/PR119-Almacenamiento/app/src/main/res/values/strings.xml
@@ -13,5 +13,6 @@
     <string name="carpeta_destino">Carpeta de destino</string>
     <string name="crear_copia_de_archivo">Crear copia de archivo</string>
     <string name="generado">Generado %1$s</string>
+    <string name="abrir">Abrir</string>
 
 </resources>
