Upgrade to Android Studio 2.1

--- a/PR158-Realm/app/src/main/res/values/strings.xml
+++ b/PR158-Realm/app/src/main/res/values/strings.xml
@@ -6,5 +6,7 @@
     <string name="avatar">Avatar</string>
     <string name="nombre">Nombre</string>
     <string name="direccion">Dirección</string>
+    <string name="actualizar_alumno">Actualizar alumno</string>
+    <string name="agregar_alumno">Agregar alumno</string>
 
 </resources>
