--- a/PR158-Realm/app/src/main/res/values/strings.xml
+++ b/PR158-Realm/app/src/main/res/values/strings.xml
@@ -8,5 +8,7 @@
     <string name="direccion">Dirección</string>
     <string name="actualizar_alumno">Actualizar alumno</string>
     <string name="agregar_alumno">Agregar alumno</string>
+    <string name="asignaturas">Asignaturas</string>
+    <string name="ninguna"><![CDATA[<Ninguna>]]></string>
 
 </resources>
