Upgrade to Android Studio 2.1

--- a/PR158-Realm/app/src/main/res/values/strings.xml
+++ b/PR158-Realm/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="agregar_alumno">Agregar alumno</string>
     <string name="asignaturas">Asignaturas</string>
     <string name="ninguna"><![CDATA[<Ninguna>]]></string>
+    <string name="seleccionar">Seleccionar</string>
 
 </resources>
