--- a/PR184-DAMTwitterClient/app/src/main/res/values/strings.xml
+++ b/PR184-DAMTwitterClient/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">PR184-DAMTwitterClient</string>
+    <string name="app_name">DAM Twitter</string>
+    <string name="login_btnLogin_error">Login error: %1$s</string>
 </resources>
