PR149 Change EditText to TextInputEditText Add PR185

--- a/PR149-TextInputLayout/app/src/main/res/values/strings.xml
+++ b/PR149-TextInputLayout/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="nombre">Nombre</string>
     <string name="telefono">Teléfono</string>
     <string name="email">Email</string>
+    <string name="password">Contraseña</string>
+    <string name="cambiar_visualizacion">Cambiar visualización</string>
 </resources>
