--- a/PR184-DAMTwitterClient/app/src/main/res/values/strings.xml
+++ b/PR184-DAMTwitterClient/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">DAM Twitter</string>
     <string name="login_btnLogin_error">Login error: %1$s</string>
+    <string name="main.logout">Log out</string>
 </resources>
