--- a/PR004-IntentsImplicitos/app/src/main/res/values/strings.xml
+++ b/PR004-IntentsImplicitos/app/src/main/res/values/strings.xml
@@ -15,5 +15,7 @@
 	<string name="no_hay_dial">No hay dial</string>
 	<string name="no_hay_aplicaci_n_de_mapas">No hay aplicación de mapas</string>
 	<string name="no_hay_gestor_de_contactos">No hay gestor de contactos</string>
-	
+	<string name="accion_no_disponible">Debe conceder el permiso de realizar llamadas</string>
+	<string name="configurar">Configurar</string>
+
 </resources>
