--- a/PR165-SortedList/app/src/main/res/values/strings.xml
+++ b/PR165-SortedList/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">SortedList</string>
-    <string name="unidades_data">%1$s %2$s</string>
+    <string name="unidades_data">%1$d %2$s</string>
     <string name="agregar_producto">Agregar producto</string>
     <string name="aceptar">Aceptar</string>
     <string name="cancelar">Cancelar</string>
