--- a/PR100-IntentService/app/src/main/res/values/strings.xml
+++ b/PR100-IntentService/app/src/main/res/values/strings.xml
@@ -7,5 +7,10 @@
     <string name="no_hay_alumnos_en_la_lista">No hay alumnos en la lista</string>
     <string name="listado_exportado">Listado exportado</string>
     <string name="abrir">Abrir</string>
+    <string name="permission_write_external_storage_rationale">Para realizar la operación es necesario que nos conceda permiso de escritura en almacenamiento externo</string>
+    <string name="permitir">Permitir</string>
+    <string name="rechazar">Rechazar</string>
+    <string name="permission_write_external_storage_denied">Permiso rechazado</string>
+    <string name="permission_write_external_storage_neverask">No volver a solicitar el permiso</string>
 
 </resources>
