--- a/PR034-VideoViewMediaController/app/src/main/res/values/strings.xml
+++ b/PR034-VideoViewMediaController/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
 <resources>
     <string name="app_name">VideoView</string>
     <string name="seleccionar_video">Seleccionar vídeo</string>
+    <string name="permission_write_external_storage_rationale">Para realizar la operación es necesario que nos conceda permiso de escritura en almacenamiento externo</string>
+    <string name="permitir">Permitir</string>
+    <string name="rechazar">Rechazar</string>
+    <string name="permission_write_external_storage_denied">Permiso rechazado</string>
+    <string name="permission_write_external_storage_neverask">No volver a solicitar el permiso</string>
+    <string name="configurar">Configurar</string>
 </resources>
