--- a/PR202-RecyclerViewPagination/app/src/main/res/values/strings.xml
+++ b/PR202-RecyclerViewPagination/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="no_hay_alumnos">No hay alumnos</string>
     <string name="ha_pulsado_sobre">Ha pulsado sobre %1$s</string>
     <string name="avatar">Avatar</string>
-    <string name="ordenar">Ordenar</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
 
 </resources>
