--- a/PR204-MVPRxJava/app/src/main/res/values/strings.xml
+++ b/PR204-MVPRxJava/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="ha_pulsado_sobre">Ha pulsado sobre %1$s</string>
     <string name="avatar">Avatar</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
