--- a/PR004-IntentsImplicitos/app/src/main/res/values/strings.xml
+++ b/PR004-IntentsImplicitos/app/src/main/res/values/strings.xml
@@ -11,7 +11,6 @@
 	<string name="mostrar_contactos">Mostrar lista de contactos</string>
 	<string name="no_hay_navegador">No hay navegador</string>
 	<string name="no_hay_buscador">No hay buscador</string>
-	<string name="no_se_puede_llamar">No se puede llamar</string>
 	<string name="no_hay_dial">No hay dial</string>
 	<string name="no_hay_aplicaci_n_de_mapas">No hay aplicación de mapas</string>
 	<string name="no_hay_gestor_de_contactos">No hay gestor de contactos</string>
@@ -19,5 +18,6 @@
 	<string name="configurar">Configurar</string>
     <string name="no_sin_permiso">No se puede realizar la acción si no se tiene el permiso</string>
     <string name="sin_conexion">No hay conexión a Internet</string>
+    <string name="no_hay_aplicacion_de_telefono">No hay aplicación de teléfono</string>
 
 </resources>
