--- a/PR005-IntentsExplicitos/app/src/main/res/values/strings.xml
+++ b/PR005-IntentsExplicitos/app/src/main/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="nombre_completo">(nombre completo)</string>
     <string name="edad_hint">(edad)</string>
     <string name="datos">Nombre: %1$s\nEdad: %2$d</string>
-    
+    <string name="error_al_solicitar_datos">Se ha producido un error al solicitar los datos</string>
+
 </resources>
