--- a/PR156-Parcelable/app/src/main/res/values/strings.xml
+++ b/PR156-Parcelable/app/src/main/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="nombre_completo">(nombre completo)</string>
     <string name="edad_hint">(edad)</string>
     <string name="datos">Nombre: %1$s\nEdad: %2$d</string>
-    
+    <string name="exito_al_solicitar_datos">Se han obtenido los datos correctamente</string>
+
 </resources>
