--- a/PR097-RetainNonConfigurationInstance/app/src/main/res/values/strings.xml
+++ b/PR097-RetainNonConfigurationInstance/app/src/main/res/values/strings.xml
@@ -3,5 +3,9 @@
 
     <string name="app_name">Contador</string>
     <string name="incrementar">Incrementar</string>
+    <string name="onsave">onSave…</string>
+    <string name="onretain">onRetain…</string>
+    <string name="icepick">Icepick</string>
+    <string name="activitystarter">ActivityStarter</string>
 
 </resources>
