--- a/PR059-ActionView/app/src/main/res/values/strings.xml
+++ b/PR059-ActionView/app/src/main/res/values/strings.xml
@@ -1,20 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">PR059-ActionView</string>
-    <string name="activity_title">ActionView</string>
-    <string-array name="alumnos">
-        <item>Baldomero</item>
-        <item>Gervasio</item>
-        <item>Filomeno</item>
-        <item>Prudencio</item>
-        <item>Casimiro</item>
-        <item>Fulgencio</item>
-        <item>Genaro</item>
-        <item>Rigoberto</item>
-        <item>Atanasio</item>
-	</string-array>
-    <string name="ha_pulsado_sobre">"Ha pulsado sobre %1$s"</string>
-    <string name="buscar">Buscar %1$s</string>
+    <string name="app_name">ActionView</string>
+
+    <string name="activity_main_mnuSearch">Buscar %1$s</string>
+
+    <string name="main_activity_student_clicked">"Clicked on %1$s"</string>
+    <string name="main_activity_search_query">Search %1$s</string>
 
 </resources>
