--- a/PR138-Palette/app/src/main/res/values/strings.xml
+++ b/PR138-Palette/app/src/main/res/values/strings.xml
@@ -1,11 +1,11 @@
 <resources>
     <string name="app_name">Palette</string>
 
-    <string name="imagen">Imagen</string>
-    <string name="vibrante">Vibrante</string>
-    <string name="apagado">Apagado</string>
-    <string name="vibrante_claro">Vibrante claro</string>
-    <string name="vibrante_oscuro">Vibrante oscuro</string>
-    <string name="apagado_claro">Apagado claro</string>
-    <string name="apagado_oscuro">Apagado oscuro</string>
+    <string name="activity_main_imgPhoto">Imagen</string>
+    <string name="activity_main_lblVibrant">Vibrante</string>
+    <string name="activity_main_lblMuted">Apagado</string>
+    <string name="activity_main_lblLightVibrant">Vibrante claro</string>
+    <string name="activity_main_lblDarkVibrant">Vibrante oscuro</string>
+    <string name="activity_main_lblLightMuted">Apagado claro</string>
+    <string name="activity_main_lblDarkMuted">Apagado oscuro</string>
 </resources>
