--- a/PR039-SoundPool/app/src/main/res/values/strings.xml
+++ b/PR039-SoundPool/app/src/main/res/values/strings.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <string name="app_name">SoundPool</string>
-    <string name="disparar">Disparar</string>
-    <string name="explosion">Explosión</string>
-
+    <string name="activity_main_imgShoot">Shoot</string>
+    <string name="activity_main_imgExplode">Explotar</string>
 </resources>
