--- a/PR080-HTTPURLConnection/app/src/main/res/values/strings.xml
+++ b/PR080-HTTPURLConnection/app/src/main/res/values/strings.xml
@@ -2,10 +2,9 @@
 <resources>
 
     <string name="app_name">Googleame</string>
-    <string name="nombre">Nombre</string>
-    <string name="buscar">Buscar</string>
-    <string name="no_hay_conexion_a_internet">No hay conexión a Internet</string>
-    <string name="entradas">%1$s entradas</string>
-    <string name="eco">Eco</string>
+    <string name="fragment_main_lblName">Nombre</string>
+    <string name="fragment_main_btnSearch">Buscar</string>
+    <string name="fragment_main_btnEcho">Eco</string>
+    <string name="main_fragment_no_connection">No hay conexión a Internet</string>
 
 </resources>
