--- a/PR154-PropertyAnimation/app/src/main/res/values-es/strings.xml
+++ b/PR154-PropertyAnimation/app/src/main/res/values-es/strings.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <string name="app_name">PropertyAnimation</string>
-    <string name="activity_main_imgPhoto">Photo</string>
-
+    <string name="activity_main_imgPhoto">Foto</string>
 </resources>
