--- a/PR170-DataBindingBidireccional/app/src/main/res/values/strings.xml
+++ b/PR170-DataBindingBidireccional/app/src/main/res/values/strings.xml
@@ -1,11 +1,11 @@
 <resources>
     <string name="app_name">DataBinding</string>
-    <string name="introduzca_nombre">Introduzca su nombre</string>
-    <string name="saludar">Saludar</string>
-    <string name="buenos_dias">Buenos días</string>
-    <string name="saludar_educadamente">Saludar educadamente</string>
-    <string name="tenga_usted">tenga usted</string>
-    <string name="lorempixel">http://lorempixel.com/200/100/sports/</string>
-    <string name="foto">Foto</string>
-    <string name="tratamiento">Tratamiento</string>
+    <string name="activity_main_lblName">Name</string>
+    <string name="activity_main_lblName_required">Name (*)</string>
+    <string name="main_activity_good_morning">Good morning</string>
+    <string name="activity_main_chkPolite">Politely</string>
+    <string name="activity_main_imgPhoto">Photo</string>
+    <string name="activity_main_lblTreatment">Treatment</string>
+    <string name="main_activity_nice_to_meet_you">. Nice to meet you</string>
+    <string name="main_activity_insult">Who do you think you are, %1$s?</string>
 </resources>
